# Musings

./: .gitignore  workspace.code-workspace
Doors Paradox/: cocentric_rotation.py
The Room Three/: README.md  main.py
advent_of_code/2021/: day1-1.py  day1-2.py  day10_1.py  day10_2.py  day12_1.py  day12_2.py  day13_1.py  day13_2.py  day15_1.py  day2-1.py  day2-2.py  day3-1.py  day3-2.py  day3_2.py  day4-1.py  day4-2.py  day5-1.py  day5_1.py  day5_2.py  day6-1.py  day7-1.py  day7_1.py  day7_2.py  day8_1.py  day8_2.py  day9_1.py  day9_2.py  util.py
advent_of_code/2021/notes/: day 8-1 digit frequencies.ods
algorithms/hanoi/: hanoi.py
automata/forest/: Pipfile  README.md  colors.py  cv2_utils.py  diagnostics.py  forest.code-workspace  forest.py  forest.pyproj  forest.sln  forest_cv2.py  forest_graphical.py  pyproject.toml  requirements.txt
automata/forest/visual_diagnostics/: __init__.py  base.py  crinkle.py  feature_size.py  octaves.py
puzzles/discord arithmetic crossword/: solve.py
puzzles/facebook-digit-combinations/: problem.py
puzzles/millionaire-question-self-referential/: millionaire.py
reddit/: computerscience_2019_03_10.py  recursive product of odd numbers.ipynb
